# pocket-riscv-rs-bug

./: Cargo.toml  Makefile  README.md  build.rs  run.txt
.cargo/: config.toml
src/: main.rs  rkyv_types.rs
