[package]
name = "minibreak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
speed-debug = []

[build-dependencies]
litex-pac = { path = "external/openfpga-litex/lang/rust/crates/litex-pac", features = ["rt"] }
image = { version = "0.24.6", features = ["png"], default-features = false }
rgb565 = "0.1.3"

# slint-build = "1.2.2"

# This refers to git main (0.8 prerelease) because 0.7 does not properly deduce the maximum atomic width.
# The rkyv maintainer has volunteered to manually add riscv32imafdc support if it is ever needed.
# If this version rev is changed here, it must also be changed in [dependencies] below.
rkyv = { git = "https://github.com/rkyv/rkyv", rev = "e86ed9c746c280f43d2d5f0265c35f67adab1f2d" }

[dependencies]
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
litex-hal = "0.3.0"
litex-openfpga = { path = "external/openfpga-litex/lang/rust/crates/litex-openfpga" }
litex-pac = { path = "external/openfpga-litex/lang/rust/crates/litex-pac", features = ["rt"] }
nb = "1.1.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
num-traits = { version = "0.2.17", default-features = false }
glam = { version = "0.24.2", default-features = false, features = ["libm", "fast-math"] }
cfg-if = "1.0.0"
rkyv = { git = "https://github.com/rkyv/rkyv", rev = "e86ed9c746c280f43d2d5f0265c35f67adab1f2d", default-features = false, features = ["alloc", "pointer_width_32"] } # , features = ["alloc", "size_32"]

